goland卡顿配置